@@ -147,8 +147,8 @@ public class SpecsPhoibosSeparateIterationCollectionStrategy implements AsyncNXC
 	}
 
 	private boolean isUsingSequence() {
-		// true if sequence is non-null
-		return sequence != null;
+		if (sequence == null) return false;
+		return sequence.getEnabledRegions().stream().count()!=0;
 	}
 
 	@Override
@@ -156,10 +156,10 @@ public class SpecsPhoibosSeparateIterationCollectionStrategy implements AsyncNXC
 		// If using a sequence return the region names else return the analyser name
 		if (isUsingSequence()) {
 			// There is a sequence so give the region names
-			return sequence.getEnabledRegions().stream().map(SpecsPhoibosRegion::getName).collect(Collectors.toList());
+			return sequence.getEnabledRegions().stream().map(SpecsPhoibosRegion::getName).toList();
 		}
-		// Use the name of the analyser as the name
-		return Arrays.asList(analyser.getName());
+		// Use the name of the analyser default region name or last run region name
+		return Arrays.asList(analyser.getRegion().getName());
 	}
 
 	@Override
@@ -496,4 +496,7 @@ public class SpecsPhoibosSeparateIterationCollectionStrategy implements AsyncNXC
 		}
 	}
 
+	public List<SpecsPhoibosRegion> getRegionsToAcquire() {
+		return regionsToAcquire;
+	}
 }
